examples/datalog/39_meta_complete/08_timing_explain.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_timing_explain
Knowledge graph 'test_timing_explain' created.
Switched to knowledge graph: test_timing_explain
> .kg use test_timing_explain
Switched to knowledge graph: test_timing_explain
> +edge[(1, 2), (2, 3), (3, 4), (4, 5), (5, 1)].
Inserted 5 fact(s) into 'edge'.
> +node[(1,), (2,), (3,), (4,), (5,)].
Inserted 5 fact(s) into 'node'.
> +path(X, Y) :- edge(X, Y).
Rule 'path' registered.
> +path(X, Z) :- edge(X, Y), path(Y, Z).
Rule 'path' registered.
> .timing on
Script error: Parse error: Unknown meta command: .timing
